--- a/style.css
+++ b/style.css
@@ -160,6 +160,9 @@ main {
 .player--winner {
   background-color: #2f2f2f;
 }
+.player--lose {
+  background-color: #ff0000;
+}
 
 .player--winner .name {
   font-weight: 700;
